--- a/config.json
+++ b/config.json
@@ -7,28 +7,28 @@
 		"ad_status": "1",
 		"ad_type": "admob",
 		"backup_ads": "none",
-		"admob_publisher_id": "pub-3940256099942544",
-		"admob_app_id": "ca-app-pub-3940256099942544~3347511713",
-		"admob_banner_unit_id": "ca-app-pub-3940256099942544/6300978111",
-		"admob_interstitial_unit_id": "ca-app-pub-3940256099942544/1033173712",
-		"admob_native_unit_id": "ca-app-pub-3940256099942544/2247696110",
-		"admob_app_open_ad_unit_id": "ca-app-pub-3940256099942544/3419835294",
-		"ad_manager_banner_unit_id": "/6499/example/banner",
-		"ad_manager_interstitial_unit_id": "/6499/example/interstitial",
-		"ad_manager_native_unit_id": "/6499/example/native",
-		"ad_manager_app_open_ad_unit_id": "/6499/example/app-open",
+		"admob_publisher_id": "pub-3071522790697118",
+		"admob_app_id": "ca-app-pub-3071522790697118~8723206826",
+		"admob_banner_unit_id": "ca-app-pub-3071522790697118/1966226780",
+		"admob_interstitial_unit_id": "ca-app-pub-3071522790697118/9963619382",
+		"admob_native_unit_id": "ca-app-pub-3071522790697118/2374093342",
+		"admob_app_open_ad_unit_id": "ca-app-pub-3071522790697118/3400794584",
+		"ad_manager_banner_unit_id": "0",
+		"ad_manager_interstitial_unit_id": "0,
+		"ad_manager_native_unit_id": "0",
+		"ad_manager_app_open_ad_unit_id": "0",
 		"startapp_app_id": "0",
-		"unity_game_id": "4089993",
-		"unity_banner_placement_id": "banner",
-		"unity_interstitial_placement_id": "video",
+		"unity_game_id": "0",
+		"unity_banner_placement_id": "0",
+		"unity_interstitial_placement_id": "0",
 		"applovin_banner_ad_unit_id": "0",
 		"applovin_interstitial_ad_unit_id": "0",
 		"applovin_native_ad_manual_unit_id": "0",
 		"applovin_banner_zone_id": "0",
 		"applovin_interstitial_zone_id": "0",
-		"ironsource_app_key": "85460dcd",
-		"ironsource_banner_id": "DefaultBanner",
-		"ironsource_interstitial_id": "DefaultInterstitial",
+		"ironsource_app_key": "0",
+		"ironsource_banner_id": "0",
+		"ironsource_interstitial_id": "0",
 		"interstitial_ad_interval": 1,
 		"native_ad_index": 5
 	}
