--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
 		"admob_native_unit_id": "ca-app-pub-3071522790697118/2374093342",
 		"admob_app_open_ad_unit_id": "ca-app-pub-3071522790697118/3400794584",
 		"ad_manager_banner_unit_id": "0",
-		"ad_manager_interstitial_unit_id": "0,
+		"ad_manager_interstitial_unit_id": "0",
 		"ad_manager_native_unit_id": "0",
 		"ad_manager_app_open_ad_unit_id": "0",
 		"startapp_app_id": "0",
